Codigo/analisa_LPD.jj
PARSER_BEGIN(analisa_LPD)
import java.io.*;
class analisa_LPD
{
	public static void main( String[] args )throws ParseException, Exception
	{
		try
		{
     		analisa_LPD analizador = new analisa_LPD( System.in ) ;
			analizador.Programa();
			System.out.println("Analisado.");
		}
		catch(ParseException e)
		{
			System.out.println(e.getMessage());
			System.out.println("Erro= ");
		}
	}
}
PARSER_END(analisa_LPD)

TOKEN :
{
	  <ATRIBUICAO : ":=">
	| <MAIS : "+" >
	| <MENOS:"-">
	| <MULT:"*">
	| <DIV:"/">

}
TOKEN:
{
	 <PROGRAMA: "programa" >
	|<INICIO :"inicio">
	|<FIM :"fim">
	|<ESCREVA : "escreva">
	|<VAR : "var">

}
TOKEN:
{
      <FECHAPARENTESES: ")" >
	| <ABREPARENTESES: "(" >
	| <PONTO_VIRGULA: ";" >
	| <VIRGULA: "," >
	| <PONTO: "." >
}

TOKEN:
{
	  <INTEIRO:"inteiro">
	| <BOOLEANO:"booleano">
	| <NUMERO : (["0"-"9"])+>
	| <VERDADEIRO :"verdadeiro">
	| <FALSO :"falso">
	| <IDENTIFICADOR : ["a"-"z","A"-"Z"](["a"-"z","A"-"Z","0"-"9","_"])*>
	| <DOIS_PONTOS : ":">
}

SKIP :
{
	" "|"\n" | "\r" | "\r\n" | "\t"
}

void Programa():
{}
{
	<PROGRAMA><IDENTIFICADOR><PONTO_VIRGULA>Bloco()<EOF>
}

void Bloco():
{}
{
	Declaracoes()Programa_Principal()
}

void Declaracoes():
{}
{
	((Declara_Variavel())*<PONTO_VIRGULA>)*
}


void Declara_Variavel():
{
	int td;
	Token v1 = new Token();
	Token v2 = new Token();
	Token var = new Token();
}
{
	<VAR>
	var = <IDENTIFICADOR>
	<DOIS_PONTOS>
	(Tipo_Dados())
	{
		td = token.kind;
		tabela_simb.InserirSimbolo(var, td);
	}
	[Variaveis_Atribuicao(var)]
}

void Tipo():
{}
{
	<INTEIRO> | <BOOLEANO>
}

void Programa_Principal():
{
	tabela_simb.SetTables();
	
}
{
	<INICIO>Sentencas()<FIM><PONTO>
}


void Variaveis_Locais():
{
	int td;
	Token var;
}
{
(
	(Tipo_Dados())
	{
		td = token.kind;
	}
	var = <IDENTIFICADOR>
	{
		tabela_simb.InserirSimbolo(var, td);
	}
	[Variaveis_Atribuicao(var)]
	(
		<VIRGULA>
		var = <IDENTIFICADOR>
		{
			tabela_simb.InserirSimbolo(var, td);
		}
		[Variaveis_Atribuicao(var)]
	)*
	<PONTO_VIRGULA>
)
	(VS())
}

void Variaveis_Atribuicao(Token v1):
{
	Token v2;
	Token v3;
	String res;
	boolean imp = false;
}
{
	<ATRIBUICAO>
	(Tipos_Atribuicao())
	  {
		v2 = token;
		res = tabela_simb.checkAtrib(v1, v2, "c");

		if(res != " ")
		{
			System.out.println(res);
			imp = true;
		}
	  }
	  (Operacao()
	  Tipos_Atribuicao()
	  {
		v3 = token;
		res = tabela_simb.checkAtrib(v1, v3, "d");

		if(res != " " && !imp)
		{
			System.out.println(res);
		}
	  })*
}

void VS():
{}
{
	LOOKAHEAD(3)Variaveis_Locais() | Sentencas()
}

void Sentencas():
{}
{
	(
	  Variaveis_Locais()
	| LOOKAHEAD(2)Atribuicao()<PONTO_VIRGULA>
	| Escreva()
	)*
}

int Operacao():
{}
{
	  (<MAIS> {return 1;})
	| (<MENOS> {return 1;})
	| (<MULT> {return 1;})
	| (<DIV> {return 1;})
	| ({return 0;})

	{return 0;}
}

void Tipo_Dados():
{}
{
	 <INTEIRO>
	|<BOOLEANO>
}

void Atribuicao():
{
	Token v1;
	Token v2;
	Token v3;
	int aux;
	String res;
	boolean imp = false;	
}
{
  v1 = <IDENTIFICADOR>
  (<ATRIBUICAO>
  (Tipos_Atribuicao())
  {
    v2 = token;
	res = tabela_simb.checkAtrib(v1, v2, "a");
	
	if(res != " ")
	{		
		imp = true;
		System.out.println("\n" + res);
	}
  }	
  (LOOKAHEAD(2)Operacao()
  Tipos_Atribuicao()
  {
    v3 = token;
	res = tabela_simb.checkAtrib(v1, v3, "b");

	if(res != " " && !imp)
	{
		System.out.println("Operacao\n" + res);
	}
  })*)

}
void Tipos_Atribuicao():
{}
{	  
	 <VERDADEIRO>
	| <FALSO>
	| <NUMERO>
	|<IDENTIFICADOR>
}

void Escreva():
{
	Token v1 = new Token();
	Token v2 = new Token();
	String res;
}
{

    <ESCREVA>
	<ABREPARENTESES>
	( v1 = <IDENTIFICADOR> | v2 = <NUMERO>)
	{
		if(v1.image != null){
		res = tabela_simb.checkExist(v1);

			if(res != " ")
			{
				System.out.println(res);
			}
		}
	}
	<FECHAPARENTESES><PONTO_VIRGULA>
}
